@@ -3,19 +3,18 @@ package io.github.davidqf555.minecraft.towerofgod.common.shinsu.techniques.insta
 import com.mojang.datafixers.util.Either;
 import io.github.davidqf555.minecraft.towerofgod.common.shinsu.techniques.ShinsuTechnique;
 import io.github.davidqf555.minecraft.towerofgod.registration.shinsu.ShinsuTechniqueRegistry;
-import net.minecraft.entity.Entity;
-import net.minecraft.util.math.BlockPos;
-import net.minecraft.util.math.vector.Vector3d;
-import net.minecraft.util.registry.Registry;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.world.gen.feature.ConfiguredFeature;
-import net.minecraft.world.gen.feature.TreeFeature;
-import net.minecraft.world.server.ServerWorld;
+import net.minecraft.core.BlockPos;
+import net.minecraft.core.Registry;
+import net.minecraft.network.chat.Component;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
+import net.minecraft.world.level.levelgen.feature.TreeFeature;
+import net.minecraft.world.phys.Vec3;
 
 import javax.annotation.Nullable;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 public class TreeWall extends GroundTechniqueInstance {
 
@@ -24,8 +23,8 @@ public class TreeWall extends GroundTechniqueInstance {
     }
 
     @Override
-    public void doEffect(ServerWorld world, Vector3d pos) {
-        List<ConfiguredFeature<?, ?>> trees = world.getServer().registryAccess().registryOrThrow(Registry.CONFIGURED_FEATURE_REGISTRY).stream().filter(feature -> feature.feature instanceof TreeFeature).collect(Collectors.toList());
+    public void doEffect(ServerLevel world, Vec3 pos) {
+        List<ConfiguredFeature<?, ?>> trees = world.getServer().registryAccess().registryOrThrow(Registry.CONFIGURED_FEATURE_REGISTRY).stream().filter(feature -> feature.feature() instanceof TreeFeature).toList();
         if (!trees.isEmpty()) {
             Random random = world.getRandom();
             int horizontalRadius = 3;
@@ -67,7 +66,7 @@ public class TreeWall extends GroundTechniqueInstance {
     public static class Factory implements ShinsuTechnique.IFactory<TreeWall> {
 
         @Override
-        public Either<TreeWall, ITextComponent> create(Entity user, @Nullable Entity target, Vector3d dir) {
+        public Either<TreeWall, Component> create(Entity user, @Nullable Entity target, Vec3 dir) {
             return Either.left(new TreeWall(user, dir.x(), dir.z()));
         }
 
